node_tests/src/errors/multiple_ctor_error.stderr
error: custom attribute panicked
  --> ./src/errors/multiple_ctor_error.rs:11:1
   |
11 | #[neon_class_macros::impl_block]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: There is already a method annotated as constructor with the name 'constructor'.
           With neon we can only export one value so the method 'second_ctor_not_allowed' is not allowed.
           To fix it, choose one of the two.
